--- a/index.html
+++ b/index.html
@@ -6,142 +6,104 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-100 min-h-screen flex flex-col">
-  <!-- 헤더 -->
-  <header class="bg-indigo-600 text-white text-center py-4 shadow-md">
-    <h1 class="text-2xl font-bold">국민건설연합 메인 상황판</h1>
-  </header>
+<body class="bg-gradient-to-br from-slate-100 to-indigo-100 min-h-screen">
+  <div class="max-w-xl mx-auto p-4">
+    <!-- 상단 타이틀 -->
+    <h1 class="text-2xl font-bold text-center text-indigo-700 mb-4">
+      국민건설연합 메인 상황판
+    </h1>
 
-  <!-- 카테고리 버튼 -->
-  <div class="flex flex-wrap justify-center gap-3 p-4 bg-white shadow">
-    <button onclick="selectCategory('인력시장')" class="cat-btn">인력시장</button>
-    <button onclick="selectCategory('단종업체')" class="cat-btn">단종업체</button>
-    <button onclick="selectCategory('장비대여')" class="cat-btn">장비대여</button>
-    <button onclick="selectCategory('자재구매')" class="cat-btn">자재구매</button>
-    <button onclick="selectCategory('네트워크')" class="cat-btn">네트워크</button>
-  </div>
-
-  <!-- 상태 안내 -->
-  <div id="statusText" class="bg-white mx-4 mt-3 p-3 rounded-xl shadow text-center text-indigo-700 font-semibold">
-    시스템: 카테고리를 선택하세요.
-  </div>
-
-  <!-- 세부 메뉴 영역 -->
-  <div id="subMenu" class="bg-white mx-4 mt-2 p-3 rounded-xl shadow hidden">
-    <h2 id="subTitle" class="text-lg font-bold text-indigo-700 mb-2"></h2>
-    <div id="subButtons" class="grid grid-cols-2 gap-2"></div>
-  </div>
-
-  <!-- 채팅 -->
-  <div class="flex-1 flex flex-col max-w-2xl w-full mx-auto mt-3">
-    <div id="chatbox" class="flex-1 bg-white rounded-xl shadow p-4 mb-3 overflow-y-auto">
-      <div class="text-indigo-600 mb-2">시스템: 상황판 초기화 완료.</div>
+    <!-- 메인 카테고리 -->
+    <div id="mainMenu" class="grid grid-cols-2 gap-3 mb-4">
+      <button onclick="selectCategory('인력시장')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">인력시장</button>
+      <button onclick="selectCategory('단종업체')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">단종업체</button>
+      <button onclick="selectCategory('장비대여')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">장비대여</button>
+      <button onclick="selectCategory('자재구매')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">자재구매</button>
+      <button onclick="selectCategory('네트워크')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold col-span-2">네트워크</button>
     </div>
 
-    <form onsubmit="sendMsg(); return false;" class="flex gap-2 mb-3">
-      <input id="userInput" placeholder="명령 입력 (예: 장비 요청, 인력 등록)"
-             class="flex-1 border rounded-xl p-2 focus:outline-none focus:ring-2 focus:ring-indigo-400">
-      <button type="submit" class="bg-indigo-600 text-white px-4 rounded-xl font-semibold">전송</button>
+    <!-- 상태 메시지 -->
+    <div id="status" class="bg-white rounded-xl p-3 shadow text-sm text-gray-700 mb-4">
+      시스템: 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.
+    </div>
+
+    <!-- 하위 메뉴 (인력시장 전용) -->
+    <div id="subMenu" class="hidden bg-white rounded-xl shadow p-4 mb-4">
+      <h2 class="text-lg font-bold mb-2 text-indigo-700" id="subTitle">인력시장 메뉴</h2>
+      <div class="grid grid-cols-2 gap-2 mb-3">
+        <button onclick="openSub('등록')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">인력 등록</button>
+        <button onclick="openSub('요청')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">인력 요청</button>
+        <button onclick="openSub('출근')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">출근 확인</button>
+        <button onclick="openSub('계약')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">계약 현황</button>
+      </div>
+      <div id="subContent" class="text-gray-700 text-sm">세부 메뉴를 선택하세요.</div>
+    </div>
+
+    <!-- 채팅 영역 -->
+    <div id="chatBox" class="bg-white rounded-xl shadow p-3 h-52 overflow-y-auto text-sm mb-3">
+      <div class="text-gray-500">시스템: 상황판 초기화 완료.</div>
+    </div>
+
+    <!-- 입력 -->
+    <form class="flex gap-2" onsubmit="sendCommand(); return false;">
+      <input id="userInput" class="flex-1 border rounded-lg px-2 py-2 text-sm" placeholder="명령 입력 (예: 인력 등록, 장비 요청 등)" autocomplete="off"/>
+      <button class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 rounded-lg">전송</button>
     </form>
 
     <!-- 하단 버튼 -->
-    <div class="flex gap-2 justify-between">
-      <button onclick="downloadLog()" class="flex-1 bg-slate-200 py-2 rounded-xl">대화 기록 다운로드</button>
-      <button onclick="callRequest()" class="flex-1 bg-emerald-500 text-white py-2 rounded-xl">전화 요청</button>
-      <button onclick="openMap()" class="flex-1 bg-indigo-400 text-white py-2 rounded-xl">네트워크 맵</button>
+    <div class="flex gap-2 mt-3">
+      <button onclick="downloadLog()" class="flex-1 bg-slate-200 hover:bg-slate-300 rounded-lg py-2 text-sm">대화 기록 다운로드</button>
+      <button onclick="alert('네트워크 맵 준비중')" class="flex-1 bg-slate-200 hover:bg-slate-300 rounded-lg py-2 text-sm">네트워크 맵</button>
     </div>
   </div>
 
-  <!-- 버튼 스타일 -->
-  <style>
-    .cat-btn {
-      background:#e0e7ff; color:#4338ca; font-weight:600;
-      padding:10px 20px; border-radius:12px;
-      transition: all 0.2s ease;
-    }
-    .cat-btn:hover { background:#6366f1; color:#fff; }
-    .sub-btn {
-      background:#f1f5f9; padding:10px; border-radius:8px;
-      text-align:center; font-weight:600; color:#334155;
-      border:1px solid #cbd5e1; transition:0.2s;
-    }
-    .sub-btn:hover { background:#e0e7ff; color:#4338ca; }
-  </style>
-
-  <!-- 스크립트 -->
   <script>
-    let chatlog = ["시스템: 상황판 초기화 완료."];
+    let chatLog = [];
 
-    // 카테고리별 세부 메뉴 정의
-    const menuData = {
-      "인력시장": ["인력 등록", "인력 요청", "출근 확인", "계약 현황"],
-      "단종업체": ["업체 등록", "입찰 요청", "협력사 리스트", "실적 확인"],
-      "장비대여": ["장비 요청", "장비 예약", "가용 현황", "반납 처리"],
-      "자재구매": ["자재 요청", "재고 확인", "구매 내역", "납품 일정"],
-      "네트워크": ["현장 지도", "연락망 조회", "위급 알림", "실시간 공정"]
-    };
-
-    function updateChatbox() {
-      document.getElementById('chatbox').innerHTML = chatlog.map(msg=>`<div>${msg}</div>`).join('');
-      document.getElementById('chatbox').scrollTop = document.getElementById('chatbox').scrollHeight;
+    function addChat(sender, msg) {
+      chatLog.push(`${sender}: ${msg}`);
+      document.getElementById('chatBox').innerHTML += `<div><strong>${sender}:</strong> ${msg}</div>`;
+      document.getElementById('chatBox').scrollTop = document.getElementById('chatBox').scrollHeight;
     }
 
     function selectCategory(cat) {
-      document.getElementById('statusText').textContent = `시스템: ${cat} 선택됨`;
-      document.getElementById('subMenu').classList.remove('hidden');
-      document.getElementById('subTitle').textContent = `${cat} 메뉴`;
-
-      const btnContainer = document.getElementById('subButtons');
-      btnContainer.innerHTML = '';
-      menuData[cat].forEach(item=>{
-        const btn = document.createElement('button');
-        btn.textContent = item;
-        btn.className = 'sub-btn';
-        btn.onclick = ()=>handleSubMenu(cat, item);
-        btnContainer.appendChild(btn);
-      });
-
-      chatlog.push(`시스템: "${cat}" 카테고리가 열렸습니다.`);
-      updateChatbox();
+      addChat('시스템', `"${cat}" 카테고리가 열렸습니다.`);
+      document.getElementById('status').innerText = `시스템: ${cat} 선택됨`;
+      if(cat === "인력시장"){
+        document.getElementById('subMenu').classList.remove('hidden');
+      } else {
+        document.getElementById('subMenu').classList.add('hidden');
+      }
     }
 
-    function handleSubMenu(cat, item) {
-      chatlog.push(`나: ${cat} - ${item} 선택`);
-      chatlog.push(`리마: "${item}" 요청 접수됨. 처리 중입니다...`);
-      updateChatbox();
+    function openSub(type){
+      let text = "";
+      if(type==="등록") text = "인력 등록: 신규 인력 프로필 입력 및 저장";
+      if(type==="요청") text = "인력 요청: 현장 필요 인력 매칭 및 승인 절차";
+      if(type==="출근") text = "출근 확인: GPS 기반 실시간 출근 상태 확인";
+      if(type==="계약") text = "계약 현황: 급여, 계약서, 상태 종합 관리";
+      document.getElementById('subContent').innerText = text;
+      addChat('시스템', `${type} 메뉴 진입`);
     }
 
-    function sendMsg() {
-      const input = document.getElementById('userInput');
-      const msg = input.value.trim();
-      if(!msg) return;
-      chatlog.push(`나: ${msg}`);
-      chatlog.push(`리마: "${msg}" 요청이 처리됩니다.`);
-      input.value = '';
-      updateChatbox();
+    function sendCommand(){
+      let v = document.getElementById('userInput').value.trim();
+      if(!v) return;
+      addChat('나', v);
+      document.getElementById('userInput').value = "";
+      setTimeout(()=>addChat('리마', `"${v}" 요청 접수됨. 처리 중입니다...`), 500);
     }
 
-    function downloadLog() {
-      const blob = new Blob([chatlog.join('\n')], { type: 'text/plain' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
+    function downloadLog(){
+      let txt = chatLog.join("\n");
+      let blob = new Blob([txt], {type:'text/plain'});
+      let url = URL.createObjectURL(blob);
+      let a = document.createElement('a');
       a.href = url;
-      a.download = 'construction_chat_log.txt';
+      a.download = '건설상황판_대화기록.txt';
       a.click();
-      URL.revokeObjectURL(url);
+      setTimeout(()=>URL.revokeObjectURL(url), 1000);
     }
-
-    function callRequest() {
-      alert("전화 요청이 전송되었습니다! 상대방 승인 시 연결됩니다. (WebRTC 연동 예정)");
-      chatlog.push("시스템: 전화 요청 전송됨.");
-      updateChatbox();
-    }
-
-    function openMap() {
-      alert("네트워크 맵이 열립니다. (지도 API 연동 예정)");
-    }
-
-    updateChatbox();
   </script>
 </body>
 </html>
