--- a/index.html
+++ b/index.html
@@ -3,106 +3,148 @@
 <head>
   <meta charset="UTF-8">
   <title>국민건설연합 메인 상황판</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAP_KEY"></script>
 </head>
-<body class="bg-gradient-to-br from-slate-100 to-indigo-100 min-h-screen">
-  <div class="max-w-xl mx-auto p-4">
-    <!-- 상단 타이틀 -->
-    <h1 class="text-2xl font-bold text-center text-indigo-700 mb-4">
-      국민건설연합 메인 상황판
-    </h1>
+<body class="bg-slate-100 min-h-screen flex flex-col">
+  <!-- 헤더 -->
+  <header class="bg-indigo-600 text-white p-4 text-center text-xl font-bold">
+    국민건설연합 메인 상황판
+  </header>
 
-    <!-- 메인 카테고리 -->
-    <div id="mainMenu" class="grid grid-cols-2 gap-3 mb-4">
-      <button onclick="selectCategory('인력시장')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">인력시장</button>
-      <button onclick="selectCategory('단종업체')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">단종업체</button>
-      <button onclick="selectCategory('장비대여')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">장비대여</button>
-      <button onclick="selectCategory('자재구매')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold">자재구매</button>
-      <button onclick="selectCategory('네트워크')" class="bg-indigo-200 hover:bg-indigo-300 p-3 rounded-xl font-semibold col-span-2">네트워크</button>
+  <!-- 지점 선택 -->
+  <div class="p-3 text-center">
+    <select id="branchSelect" class="border p-2 rounded">
+      <option>서울본사</option>
+      <option>부산지점</option>
+      <option>대구지점</option>
+      <!-- TODO: 300개 지점 자동 생성 -->
+    </select>
+  </div>
+
+  <!-- 메인 카테고리 -->
+  <div class="grid grid-cols-2 gap-3 p-4">
+    <button onclick="openCategory('인력시장')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">인력시장</button>
+    <button onclick="openCategory('단종업체')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">단종업체</button>
+    <button onclick="openCategory('장비대여')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">장비대여</button>
+    <button onclick="openCategory('자재구매')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">자재구매</button>
+    <button onclick="openMap()" class="bg-indigo-100 p-4 rounded-xl font-bold col-span-2 hover:bg-indigo-200">네트워크 맵</button>
+  </div>
+
+  <!-- 리마 채팅 -->
+  <div class="flex-1 p-4">
+    <div id="chatbox" class="bg-white rounded-xl p-3 h-48 overflow-y-auto shadow">
+      <div class="text-gray-600">시스템: 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.</div>
     </div>
-
-    <!-- 상태 메시지 -->
-    <div id="status" class="bg-white rounded-xl p-3 shadow text-sm text-gray-700 mb-4">
-      시스템: 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.
-    </div>
-
-    <!-- 하위 메뉴 (인력시장 전용) -->
-    <div id="subMenu" class="hidden bg-white rounded-xl shadow p-4 mb-4">
-      <h2 class="text-lg font-bold mb-2 text-indigo-700" id="subTitle">인력시장 메뉴</h2>
-      <div class="grid grid-cols-2 gap-2 mb-3">
-        <button onclick="openSub('등록')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">인력 등록</button>
-        <button onclick="openSub('요청')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">인력 요청</button>
-        <button onclick="openSub('출근')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">출근 확인</button>
-        <button onclick="openSub('계약')" class="bg-indigo-50 hover:bg-indigo-100 p-2 rounded-lg border font-semibold">계약 현황</button>
-      </div>
-      <div id="subContent" class="text-gray-700 text-sm">세부 메뉴를 선택하세요.</div>
-    </div>
-
-    <!-- 채팅 영역 -->
-    <div id="chatBox" class="bg-white rounded-xl shadow p-3 h-52 overflow-y-auto text-sm mb-3">
-      <div class="text-gray-500">시스템: 상황판 초기화 완료.</div>
-    </div>
-
-    <!-- 입력 -->
-    <form class="flex gap-2" onsubmit="sendCommand(); return false;">
-      <input id="userInput" class="flex-1 border rounded-lg px-2 py-2 text-sm" placeholder="명령 입력 (예: 인력 등록, 장비 요청 등)" autocomplete="off"/>
-      <button class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 rounded-lg">전송</button>
+    <form onsubmit="sendMessage();return false;" class="flex mt-3 gap-2">
+      <input id="userInput" placeholder="명령 입력 (예: 인력 등록, 장비 요청)" class="flex-1 border p-2 rounded"/>
+      <button class="bg-indigo-600 text-white px-4 rounded">전송</button>
     </form>
+    <div class="flex justify-between mt-3">
+      <button onclick="downloadLog()" class="bg-slate-200 px-3 py-1 rounded">대화 기록 다운로드</button>
+      <button onclick="openMap()" class="bg-slate-200 px-3 py-1 rounded">네트워크 맵</button>
+    </div>
+  </div>
 
-    <!-- 하단 버튼 -->
-    <div class="flex gap-2 mt-3">
-      <button onclick="downloadLog()" class="flex-1 bg-slate-200 hover:bg-slate-300 rounded-lg py-2 text-sm">대화 기록 다운로드</button>
-      <button onclick="alert('네트워크 맵 준비중')" class="flex-1 bg-slate-200 hover:bg-slate-300 rounded-lg py-2 text-sm">네트워크 맵</button>
+  <!-- 모달: 카테고리 상세 -->
+  <div id="modalBG" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden">
+    <div class="bg-white rounded-xl p-6 w-[90vw] max-w-md relative">
+      <button onclick="closeModal()" class="absolute top-2 right-3 text-2xl text-gray-400 hover:text-indigo-500">&times;</button>
+      <div id="modalContent"></div>
+    </div>
+  </div>
+
+  <!-- 지도 모달 -->
+  <div id="mapModal" class="fixed inset-0 bg-black bg-opacity-50 hidden">
+    <div class="bg-white w-[95vw] h-[80vh] mx-auto my-6 rounded-xl overflow-hidden relative">
+      <button onclick="closeMap()" class="absolute top-2 right-3 text-2xl text-gray-400 hover:text-indigo-500">&times;</button>
+      <div id="map" class="w-full h-full"></div>
     </div>
   </div>
 
   <script>
-    let chatLog = [];
+    let chatlog = [];
 
-    function addChat(sender, msg) {
-      chatLog.push(`${sender}: ${msg}`);
-      document.getElementById('chatBox').innerHTML += `<div><strong>${sender}:</strong> ${msg}</div>`;
-      document.getElementById('chatBox').scrollTop = document.getElementById('chatBox').scrollHeight;
-    }
-
-    function selectCategory(cat) {
-      addChat('시스템', `"${cat}" 카테고리가 열렸습니다.`);
-      document.getElementById('status').innerText = `시스템: ${cat} 선택됨`;
-      if(cat === "인력시장"){
-        document.getElementById('subMenu').classList.remove('hidden');
+    function openCategory(cat){
+      if(cat==="인력시장"){
+        document.getElementById('modalContent').innerHTML = `
+          <h2 class="text-xl font-bold mb-2 text-indigo-700">${cat} 메뉴</h2>
+          <div class="grid grid-cols-2 gap-3">
+            <button onclick="alert('인력 등록')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">인력 등록</button>
+            <button onclick="alert('인력 요청')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">인력 요청</button>
+            <button onclick="alert('출근 확인')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">출근 확인</button>
+            <button onclick="alert('계약 현황')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">계약 현황</button>
+          </div>`;
       } else {
-        document.getElementById('subMenu').classList.add('hidden');
+        document.getElementById('modalContent').innerHTML = `<h2 class="text-lg font-bold">${cat} 메뉴 준비중</h2>`;
       }
+      document.getElementById('modalBG').classList.remove('hidden');
+      addMessage('시스템', `${cat} 카테고리 열렸습니다.`);
     }
 
-    function openSub(type){
-      let text = "";
-      if(type==="등록") text = "인력 등록: 신규 인력 프로필 입력 및 저장";
-      if(type==="요청") text = "인력 요청: 현장 필요 인력 매칭 및 승인 절차";
-      if(type==="출근") text = "출근 확인: GPS 기반 실시간 출근 상태 확인";
-      if(type==="계약") text = "계약 현황: 급여, 계약서, 상태 종합 관리";
-      document.getElementById('subContent').innerText = text;
-      addChat('시스템', `${type} 메뉴 진입`);
+    function closeModal(){
+      document.getElementById('modalBG').classList.add('hidden');
     }
 
-    function sendCommand(){
-      let v = document.getElementById('userInput').value.trim();
-      if(!v) return;
-      addChat('나', v);
-      document.getElementById('userInput').value = "";
-      setTimeout(()=>addChat('리마', `"${v}" 요청 접수됨. 처리 중입니다...`), 500);
+    function openMap(){
+      document.getElementById('mapModal').classList.remove('hidden');
+      initMap();
+    }
+
+    function closeMap(){
+      document.getElementById('mapModal').classList.add('hidden');
+    }
+
+    function initMap(){
+      const map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat:37.5665, lng:126.9780}, zoom:7
+      });
+
+      // 예시: 3개 지점 (추후 300개 자동 추가)
+      const branches = [
+        {name:"서울본사", lat:37.5665, lng:126.9780, status:"green"},
+        {name:"부산지점", lat:35.1796, lng:129.0756, status:"orange"},
+        {name:"대구지점", lat:35.8714, lng:128.6014, status:"red"}
+      ];
+
+      branches.forEach(b=>{
+        const marker = new google.maps.Marker({
+          position: {lat:b.lat, lng:b.lng},
+          map: map,
+          title: b.name,
+          icon: {
+            url:`http://maps.google.com/mapfiles/ms/icons/${b.status}-dot.png`
+          }
+        });
+      });
+    }
+
+    function sendMessage(){
+      const input = document.getElementById('userInput');
+      const msg = input.value.trim();
+      if(!msg) return;
+      addMessage('나', msg);
+      setTimeout(()=>addMessage('리마', `"${msg}" 요청 접수됨. 처리 중입니다...`), 500);
+      input.value = '';
+    }
+
+    function addMessage(sender, msg){
+      chatlog.push(`${sender}: ${msg}`);
+      const chatbox = document.getElementById('chatbox');
+      const div = document.createElement('div');
+      div.className = sender==='나' ? 'text-right text-gray-800 font-medium my-1' : 'text-left text-gray-600 my-1';
+      div.innerHTML = `<span class="font-bold">${sender}:</span> ${msg}`;
+      chatbox.appendChild(div);
+      chatbox.scrollTop = chatbox.scrollHeight;
     }
 
     function downloadLog(){
-      let txt = chatLog.join("\n");
-      let blob = new Blob([txt], {type:'text/plain'});
-      let url = URL.createObjectURL(blob);
-      let a = document.createElement('a');
-      a.href = url;
-      a.download = '건설상황판_대화기록.txt';
-      a.click();
-      setTimeout(()=>URL.revokeObjectURL(url), 1000);
+      const blob = new Blob([chatlog.join('\n')],{type:'text/plain'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url; a.download = '건설연합_대화기록.txt'; a.click();
+      URL.revokeObjectURL(url);
     }
   </script>
 </body>
