--- a/index.html
+++ b/index.html
@@ -2,150 +2,123 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>국민건설연합 메인 상황판</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAP_KEY"></script>
+  <title>국민건설연합 메인 상황판</title>
+  <style>
+    body { font-family: 'Pretendard', sans-serif; background:#eef2fa; margin:0; }
+    header { background:#6554c0; color:white; padding:14px; font-size:1.4em; text-align:center; font-weight:700;}
+    .container { max-width:450px; margin:0 auto; padding:15px;}
+    select { width:100%; padding:8px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em;}
+    .menu, .submenu { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin-bottom:10px;}
+    .menu button, .submenu button { flex:1 1 45%; padding:12px; border:none; border-radius:10px; font-size:1em; cursor:pointer; font-weight:600;}
+    .menu button { background:#ddd; color:#333;}
+    .menu button.active { background:#6554c0; color:white;}
+    .submenu button { background:#f1f1f9; color:#6554c0; border:1px solid #ccc;}
+    .chatbox { background:white; border-radius:10px; padding:10px; min-height:160px; font-size:0.95em; margin-bottom:10px; overflow-y:auto;}
+    .log-system { color:#6b5fcf; font-weight:600;}
+    .log-user { text-align:right; color:#333;}
+    .log-lima { color:#4a4a4a;}
+    .inputbar { display:flex; gap:7px;}
+    .inputbar input { flex:1; padding:10px; border-radius:8px; border:1px solid #ccc;}
+    .inputbar button { padding:10px 20px; border-radius:8px; border:none; background:#6554c0; color:white; font-weight:600;}
+    .bottom-btn { display:flex; gap:10px; margin-top:10px;}
+    .bottom-btn button { flex:1; padding:10px; border:none; border-radius:8px; background:#ddd; font-weight:600;}
+  </style>
 </head>
-<body class="bg-slate-100 min-h-screen flex flex-col">
-  <!-- 헤더 -->
-  <header class="bg-indigo-600 text-white p-4 text-center text-xl font-bold">
-    국민건설연합 메인 상황판
-  </header>
-
+<body>
+<header>국민건설연합 메인 상황판</header>
+<div class="container">
   <!-- 지점 선택 -->
-  <div class="p-3 text-center">
-    <select id="branchSelect" class="border p-2 rounded">
-      <option>서울본사</option>
-      <option>부산지점</option>
-      <option>대구지점</option>
-      <!-- TODO: 300개 지점 자동 생성 -->
-    </select>
-  </div>
+  <select id="branch">
+    <option>서울본사</option>
+    <option>부산지사</option>
+    <option>대구지사</option>
+    <option>광주지사</option>
+  </select>
 
   <!-- 메인 카테고리 -->
-  <div class="grid grid-cols-2 gap-3 p-4">
-    <button onclick="openCategory('인력시장')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">인력시장</button>
-    <button onclick="openCategory('단종업체')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">단종업체</button>
-    <button onclick="openCategory('장비대여')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">장비대여</button>
-    <button onclick="openCategory('자재구매')" class="bg-indigo-100 p-4 rounded-xl font-bold hover:bg-indigo-200">자재구매</button>
-    <button onclick="openMap()" class="bg-indigo-100 p-4 rounded-xl font-bold col-span-2 hover:bg-indigo-200">네트워크 맵</button>
+  <div class="menu">
+    <button onclick="openCategory('인력시장')" id="btnWork">인력시장</button>
+    <button onclick="openCategory('단종업체')">단종업체</button>
+    <button onclick="openCategory('장비대여')">장비대여</button>
+    <button onclick="openCategory('자재구매')">자재구매</button>
+    <button onclick="openCategory('네트워크')">네트워크 맵</button>
   </div>
 
-  <!-- 리마 채팅 -->
-  <div class="flex-1 p-4">
-    <div id="chatbox" class="bg-white rounded-xl p-3 h-48 overflow-y-auto shadow">
-      <div class="text-gray-600">시스템: 건설 상황판에 오신 것을 환영합니다! 카테고리를 선택하세요.</div>
-    </div>
-    <form onsubmit="sendMessage();return false;" class="flex mt-3 gap-2">
-      <input id="userInput" placeholder="명령 입력 (예: 인력 등록, 장비 요청)" class="flex-1 border p-2 rounded"/>
-      <button class="bg-indigo-600 text-white px-4 rounded">전송</button>
-    </form>
-    <div class="flex justify-between mt-3">
-      <button onclick="downloadLog()" class="bg-slate-200 px-3 py-1 rounded">대화 기록 다운로드</button>
-      <button onclick="openMap()" class="bg-slate-200 px-3 py-1 rounded">네트워크 맵</button>
-    </div>
+  <!-- 세부 메뉴 -->
+  <div class="submenu" id="submenu"></div>
+
+  <!-- 대화창 -->
+  <div class="chatbox" id="chatbox">
+    <div class="log-system">시스템: 상황판 초기화 완료.</div>
   </div>
 
-  <!-- 모달: 카테고리 상세 -->
-  <div id="modalBG" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden">
-    <div class="bg-white rounded-xl p-6 w-[90vw] max-w-md relative">
-      <button onclick="closeModal()" class="absolute top-2 right-3 text-2xl text-gray-400 hover:text-indigo-500">&times;</button>
-      <div id="modalContent"></div>
-    </div>
+  <!-- 명령 입력 -->
+  <form class="inputbar" onsubmit="sendCommand();return false;">
+    <input id="userInput" placeholder="명령 입력 (예: 인력 등록, 장비 요청 등)"/>
+    <button type="submit">전송</button>
+  </form>
+
+  <!-- 하단 버튼 -->
+  <div class="bottom-btn">
+    <button onclick="downloadLog()">대화 기록 다운로드</button>
+    <button onclick="alert('네트워크 맵 준비중')">네트워크 맵</button>
   </div>
+</div>
 
-  <!-- 지도 모달 -->
-  <div id="mapModal" class="fixed inset-0 bg-black bg-opacity-50 hidden">
-    <div class="bg-white w-[95vw] h-[80vh] mx-auto my-6 rounded-xl overflow-hidden relative">
-      <button onclick="closeMap()" class="absolute top-2 right-3 text-2xl text-gray-400 hover:text-indigo-500">&times;</button>
-      <div id="map" class="w-full h-full"></div>
-    </div>
-  </div>
+<script>
+  const chatbox = document.getElementById('chatbox');
+  const submenu = document.getElementById('submenu');
+  let currentCategory = null;
 
-  <script>
-    let chatlog = [];
+  // 카테고리 열기
+  function openCategory(cat){
+    currentCategory = cat;
+    document.querySelectorAll('.menu button').forEach(btn=>btn.classList.remove('active'));
+    event.target.classList.add('active');
 
-    function openCategory(cat){
-      if(cat==="인력시장"){
-        document.getElementById('modalContent').innerHTML = `
-          <h2 class="text-xl font-bold mb-2 text-indigo-700">${cat} 메뉴</h2>
-          <div class="grid grid-cols-2 gap-3">
-            <button onclick="alert('인력 등록')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">인력 등록</button>
-            <button onclick="alert('인력 요청')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">인력 요청</button>
-            <button onclick="alert('출근 확인')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">출근 확인</button>
-            <button onclick="alert('계약 현황')" class="bg-indigo-50 p-3 rounded hover:bg-indigo-100">계약 현황</button>
-          </div>`;
-      } else {
-        document.getElementById('modalContent').innerHTML = `<h2 class="text-lg font-bold">${cat} 메뉴 준비중</h2>`;
-      }
-      document.getElementById('modalBG').classList.remove('hidden');
-      addMessage('시스템', `${cat} 카테고리 열렸습니다.`);
+    addLog('system', `${cat} 카테고리 열렸습니다.`);
+
+    if(cat === '인력시장'){
+      submenu.innerHTML = `
+        <button onclick="addLog('system','인력 등록 메뉴 선택됨')">인력 등록</button>
+        <button onclick="addLog('system','인력 요청 메뉴 선택됨')">인력 요청</button>
+        <button onclick="addLog('system','출근 확인 메뉴 선택됨')">출근 확인</button>
+        <button onclick="addLog('system','계약 현황 메뉴 선택됨')">계약 현황</button>
+      `;
+    } else {
+      submenu.innerHTML = `<button style="flex:1;background:#eee;">${cat} 메뉴 준비중</button>`;
     }
+  }
 
-    function closeModal(){
-      document.getElementById('modalBG').classList.add('hidden');
-    }
+  // 로그 출력
+  function addLog(type, msg){
+    const div = document.createElement('div');
+    div.className = type === 'system' ? 'log-system' : (type==='user'?'log-user':'log-lima');
+    div.textContent = `${type==='system'?'시스템':type==='user'?'나':'리마'}: ${msg}`;
+    chatbox.appendChild(div);
+    chatbox.scrollTop = chatbox.scrollHeight;
+  }
 
-    function openMap(){
-      document.getElementById('mapModal').classList.remove('hidden');
-      initMap();
-    }
+  // 명령 전송
+  function sendCommand(){
+    const v = document.getElementById('userInput').value.trim();
+    if(!v) return;
+    addLog('user', v);
+    document.getElementById('userInput').value = '';
+    setTimeout(()=>addLog('lima', `"${v}" 요청 접수됨. 처리중입니다...`), 600);
+  }
 
-    function closeMap(){
-      document.getElementById('mapModal').classList.add('hidden');
-    }
-
-    function initMap(){
-      const map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat:37.5665, lng:126.9780}, zoom:7
-      });
-
-      // 예시: 3개 지점 (추후 300개 자동 추가)
-      const branches = [
-        {name:"서울본사", lat:37.5665, lng:126.9780, status:"green"},
-        {name:"부산지점", lat:35.1796, lng:129.0756, status:"orange"},
-        {name:"대구지점", lat:35.8714, lng:128.6014, status:"red"}
-      ];
-
-      branches.forEach(b=>{
-        const marker = new google.maps.Marker({
-          position: {lat:b.lat, lng:b.lng},
-          map: map,
-          title: b.name,
-          icon: {
-            url:`http://maps.google.com/mapfiles/ms/icons/${b.status}-dot.png`
-          }
-        });
-      });
-    }
-
-    function sendMessage(){
-      const input = document.getElementById('userInput');
-      const msg = input.value.trim();
-      if(!msg) return;
-      addMessage('나', msg);
-      setTimeout(()=>addMessage('리마', `"${msg}" 요청 접수됨. 처리 중입니다...`), 500);
-      input.value = '';
-    }
-
-    function addMessage(sender, msg){
-      chatlog.push(`${sender}: ${msg}`);
-      const chatbox = document.getElementById('chatbox');
-      const div = document.createElement('div');
-      div.className = sender==='나' ? 'text-right text-gray-800 font-medium my-1' : 'text-left text-gray-600 my-1';
-      div.innerHTML = `<span class="font-bold">${sender}:</span> ${msg}`;
-      chatbox.appendChild(div);
-      chatbox.scrollTop = chatbox.scrollHeight;
-    }
-
-    function downloadLog(){
-      const blob = new Blob([chatlog.join('\n')],{type:'text/plain'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = '건설연합_대화기록.txt'; a.click();
-      URL.revokeObjectURL(url);
-    }
-  </script>
+  // 대화 기록 다운로드
+  function downloadLog(){
+    const logs = Array.from(chatbox.children).map(div=>div.textContent).join('\n');
+    const blob = new Blob([logs], {type:'text/plain'});
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url; a.download = '상황판_대화기록.txt';
+    a.click();
+    URL.revokeObjectURL(url);
+  }
+</script>
 </body>
 </html>
